# music-league-scrape

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: analyze.py  anonymise_fixtures.py  auth.py  client.py  log.py  names.py  parse.py  scrape.py  songs_page.py
tests/: fixture_names.json  test_analyze.py  test_auth.py  test_names.py  test_parse.py
webpages/: landing.html  league.html  round.html  round_forfeit.html
webpages/landing_files/: cdn.min.js.download  css2  main.a6cfe222.js.download  script.js.download  sweetalert2.all.min.js.download  sweetalert2.min.css
webpages/league_files/: ads-1939.js.download  date_fns.min.js.download  json-enc.js.download  linkify-string.min.js.download  profile  profile(2)  profile(3)  profile(4)  profile(5)  profile(6)  saved_resource  vendor.4969c740.js.download
webpages/round_files/: linkify.min.js.download  profile  profile(1)  profile(10)  profile(2)  profile(4)  profile(5)  profile(6)  profile(7)  profile(8)  profile(9)  script.js.download  style-1.1.9.css
